# omega

./: Cargo.toml  README.md  justfile
examples/core/core_pkg/: collections.omg  core_pkg.omg
examples/core_demo/: main.omg
examples/dev/: cycle_a.omg  cycle_b.omg  main.omg  simplemodule.omg
examples/dev/mymodule/: helper.omg  mymodule.omg  thing.omg
examples/extern_lib/: mathlib.omg
omega-analyzer/: Cargo.toml
omega-analyzer/src/: analysis.rs  annotations.rs  attributes.rs  checked.rs  context.rs  dead_code.rs  error.rs  exhaustiveness.rs  generics.rs  lib.rs  place.rs  resolved_type.rs  resolver.rs  rich_syntax_tree.rs  similarity.rs
omega-codegen/: Cargo.toml
omega-codegen/src/: codegen.rs  lib.rs  mangle.rs  state.rs  target.rs
omega-core/core/: cmp.omg  core.omg  default.omg  numerics.omg  slices.omg  strings.omg
omega-diagnostics/: Cargo.toml
omega-diagnostics/src/: diagnostic.rs  highlight.rs  lib.rs  render.rs  source.rs  span.rs
omega-driver/: Cargo.toml
omega-driver/src/: fs_resolve.rs  lib.rs
omega-hir/: Cargo.toml
omega-hir/src/: hir.rs  ids.rs  lib.rs  lower.rs
omega-mangle/: Cargo.toml
omega-mangle/src/: base62.rs  demangle.rs  encode.rs  grammar.rs  lib.rs  symbol.rs
omega-mangle/tests/: roundtrip.rs
omega-parser/: Cargo.toml
omega-parser/src/: diagnostics.rs  highlight.rs  lexer.rs  lib.rs  macros.rs  node.rs  prelude.rs
omega-parser/src/ast/: annotation.rs  attribute.rs  generics.rs  identifier.rs  mod.rs  range.rs  self_mode.rs  type.rs
omega-shims/: x86_64-unknown-linux.S
omgc/: Cargo.toml
omgc/src/: main.rs
(+87 files in other folders)
